--- a/tennis-calendar/src/App.css
+++ b/tennis-calendar/src/App.css
@@ -43,3 +43,25 @@
     transform: rotate(360deg);
   }
 }
+
+/* Styl kontenera modala */
+.ReactModal__Content {
+  top: 50% !important;
+  left: 50% !important;
+  right: auto !important;
+  bottom: auto !important;
+  margin-right: -50% !important;
+  transform: translate(-50%, -50%) !important;
+  z-index: 1050 !important;
+  position: fixed !important;
+  background: #fff !important;
+  border: 1px solid #ccc !important;
+  border-radius: 8px !important;
+  padding: 20px!important;
+}
+
+/* Styl nakładki modala */
+.ReactModal__Overlay {
+  z-index: 1040 !important;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
