--- a/tennis-calendar/src/components/Calendar.css
+++ b/tennis-calendar/src/components/Calendar.css
@@ -6,11 +6,29 @@
 }
 
 .fc-event {
-    display: flex;          /* Ustawienie flexbox */
-    justify-content: center; /* Wyśrodkowanie poziome */
-    align-items: center;    /* Wyśrodkowanie pionowe */
-    text-align: center;     /* Dodatkowe wyśrodkowanie tekstu */
-    font-size: 1em;         /* Dopasowanie rozmiaru czcionki */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 1em;
+    padding: 4px;
+    white-space: normal; /* Pozwala na zawijanie tekstu */
+}
+
+@media (max-width: 768px) {
+    .fc-toolbar {
+        flex-direction: column !important;
+    }
+
+    .fc-event {
+        font-size: 0.9em;
+    }
+
+    .fc-toolbar .fc-button {
+        font-size: 12px;
+        padding: 6px 8px;
+        border-radius: 3px;
+    }
 }
 
 .fc-daygrid-event {
@@ -33,22 +51,22 @@
     font-weight: bold !important;
 }
 
-/* Klasa dla zajętych godzin (czerwone tło) */
+/* Klasa dla zajętych godzin) */
 .event-occupied {
-    background-color: rgb(243, 74, 74) !important;
+    background-color: #2b0504 !important;
     color: white;
     text-align: center;
     border-radius: 4px;
-    border-color: rgb(243, 74, 74) !important;
+    border-color: #010001 !important;
 }
 
-/* Klasa dla dostępnych godzin (zielone tło) */
+/* Klasa dla dostępnych godzin */
 .event-available {
-    background-color: rgb(41, 141, 41) !important;
-    color: white;
+    background-color: #bc5f04 !important;
+    color: black;
     text-align: center;
     border-radius: 4px;
-    border-color: rgb(41, 141, 41) !important;
+    border-color: #2b0504 !important;
 }
 
 .fc-daygrid-event-dot {
@@ -58,4 +76,87 @@
 
 .active-button {
     background-color: #1a252f !important;
+    color: white !important;
+    border: none;
+    border-radius: 5px;
+}
+
+.active-button:hover {
+    opacity: 0.8;
+}
+
+/* Modal dla rezerwacji i szczegółów administratora */
+.react-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    width: 100%;
+    z-index: 1000;
+}
+
+.react-modal h3 {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.react-modal form label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.react-modal textarea {
+    width: 100%;
+    height: 80px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 8px;
+}
+
+.react-modal button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.react-modal button[type="submit"] {
+    background-color: #28a745;
+    color: white;
+}
+
+.delete-reservation-btn {
+    padding: "5px 10px";
+    background-color: #dc3545;
+    color: "#fff";
+    border: "none";
+    border-radius: "5px";
+    margin-top: "10px";
+}
+
+.delete-reservation-btn:hover {
+    background-color: #b52d3a;
+}
+
+.add-reservation-admin-btn {
+    background-color: #007bff !important;
+    color: white;
+}
+
+/* Lista szczegółów administratora */
+.react-modal ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.react-modal ul li {
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
 }
