--- a/tennis-calendar/src/components/Calendar.css
+++ b/tennis-calendar/src/components/Calendar.css
@@ -12,7 +12,35 @@
     text-align: center;
     font-size: 1em;
     padding: 4px;
-    white-space: normal; /* Pozwala na zawijanie tekstu */
+    white-space: normal;
+}
+
+.fc-toolbar {
+    background-color: #a3b18a;
+}
+
+.fc .fc-button {
+    background-color: #3a5a40 !important;
+    color: #ffffff !important;
+    border: 1px solid #588157 !important;
+}
+
+.fc .fc-button:hover {
+    background-color: #344e41 !important;
+    color: #ffffff !important;
+    border-color: #344e41 !important;
+}
+
+.fc .fc-button.fc-button-active {
+    background-color: #588157 !important;
+    color: #ffffff !important;
+    border-color: #588157 !important;
+}
+
+.fc-toolbar .fc-button.active-button {
+    background-color: #588157 !important;
+    color: white !important;
+    border-color: #588157 !important;
 }
 
 @media (max-width: 768px) {
@@ -53,20 +81,14 @@
 
 /* Klasa dla zajętych godzin) */
 .event-occupied {
-    background-color: #2b0504 !important;
+    background-color: #344e41;
     color: white;
-    text-align: center;
-    border-radius: 4px;
-    border-color: #010001 !important;
 }
 
 /* Klasa dla dostępnych godzin */
 .event-available {
-    background-color: #bc5f04 !important;
-    color: black;
-    text-align: center;
-    border-radius: 4px;
-    border-color: #2b0504 !important;
+    background-color: #588157; /* Dostępne */
+    color: white;
 }
 
 .fc-daygrid-event-dot {
@@ -132,21 +154,48 @@
 }
 
 .delete-reservation-btn {
-    padding: "5px 10px";
     background-color: #dc3545;
-    color: "#fff";
-    border: "none";
-    border-radius: "5px";
-    margin-top: "10px";
+    color: white;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-top: 5px;
 }
 
+.add-reservation-admin-btn:hover,
 .delete-reservation-btn:hover {
-    background-color: #b52d3a;
+    opacity: 0.9;
 }
 
 .add-reservation-admin-btn {
-    background-color: #007bff !important;
+    background-color: #3a5a40;
     color: white;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+}
+
+.new-reservation-button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.reservation-divider {
+    border-top: 1px solid #344e41;
+    margin: 10px 0;
+}
+
+.reservation-details-title {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
 }
 
 /* Lista szczegółów administratora */
@@ -159,4 +208,91 @@
     margin-bottom: 15px;
     border-bottom: 1px solid #ccc;
     padding-bottom: 10px;
+}
+
+/* Styl głównego kontenera modala */
+.reservation-modal-container {
+    padding: 20px;
+    background-color: #dad7cd; /* Kolor tła */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    font-family: Arial, sans-serif;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+/* Tytuł modala */
+.reservation-modal-title {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #344e41;
+}
+
+/* Pole formularza */
+.reservation-modal-field {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+}
+
+/* Etykieta i wartość */
+.reservation-modal-field label {
+    color: #344e41;
+    font-weight: bold;
+}
+
+.reservation-modal-field span {
+    color: #588157;
+}
+
+/* Inputy i selecty */
+.reservation-select,
+.reservation-textarea {
+    width: 60%;
+    padding: 8px;
+    border: 1px solid #588157;
+    border-radius: 5px;
+    font-size: 14px;
+    background-color: #a3b18a;
+    color: #344e41;
+}
+
+.reservation-textarea {
+    resize: none;
+    height: 50px;
+}
+
+/* Styl przycisków */
+.reservation-modal-actions {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.reservation-modal-button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.reservation-modal-button.confirm {
+    background-color: #3a5a40;
+    color: white;
+}
+
+.reservation-modal-button.cancel {
+    background-color: #dc3545;
+    color: white;
+}
+
+.reservation-modal-button:hover {
+    opacity: 0.9;
 }
